--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "Personalisierung",
   "Plain text (.txt)": "Klartext (.txt)",
   "Playground": "Spielplatz",
-  "Please complete the KYC verification to convert your points into cash": "Bitte die KYC-Verifikation abschließen, um Ihre Punkte in Bargeld zu konvertieren",
+  "Please complete the KYC verification !": "Bitte die KYC-Verifizierung abschließen !",
   "Please enter the password!": "Bitte geben Sie das Passwort ein!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Bitte installieren Sie das Ethereum-Wallet-Plugin, z.B. MetaMask.",
   "Please log in to your wallet first!": "Bitte melden Sie sich zuerst in Ihre Wallet an!",
