--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "",
   "Plain text (.txt)": "",
   "Playground": "",
-  "Please complete the KYC verification to convert your points into cash": "",
+  "Please complete the KYC verification !": "",
   "Please enter the password!": "",
   "Please install Ethereum wallet plugin, such as MetaMask.": "",
   "Please log in to your wallet first!": "",
