--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "Personalización",
   "Plain text (.txt)": "Texto plano (.txt)",
   "Playground": "Campo de juego",
-  "Please complete the KYC verification to convert your points into cash": "Por favor, completa la verificación KYC para convertir tus puntos en efectivo",
+  "Please complete the KYC verification !": "Por favor, complete la verificación KYC !",
   "Please enter the password!": "Por favor, ingresa la contraseña!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Por favor, instala el plugin de billetera Ethereum, como MetaMask.",
   "Please log in to your wallet first!": "Por favor, inicia sesión en tu billetera primero!",
