--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -382,8 +382,8 @@
   "Per user, billed monthly": "Per pengguna, dibebankan bulanan",
   "Personalization": "Personalitas",
   "Plain text (.txt)": "Teks Murni (.txt)",
-  "Playground": "Tempat Bermain",
-  "Please complete the KYC verification to convert your points into cash": "Mohon lengkapkan verifikasi KYC untuk mengubah poin Anda menjadi uang tunai",
+  "Playground": "Tempat Bermain", 
+  "Please complete the KYC verification !": "Silakan selesaikan verifikasi KYC !",
   "Please enter the password!": "Mohon masukkan kata sandi!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Mohon instal plugin dompet Ethereum, seperti MetaMask.",
   "Please log in to your wallet first!": "Mohon masukkan ke dompet Anda terlebih dahulu!",
