--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -384,7 +384,7 @@
   "Personalization": "個性化；パーソナライズ",
   "Plain text (.txt)": "平文（.txt）",
   "Playground": "プレイグラウンド",
-  "Please complete the KYC verification to convert your points into cash": "ポイントを現金に変換するには KYC 検証を完了してください",
+  "Please complete the KYC verification !": "KYC の検証を完了してください。",
   "Please enter the password!": "パスワードを入力してください！",
   "Please install Ethereum wallet plugin, such as MetaMask.": "MetaMask などの Ethereum ウォレットプラグインをインストールしてください。",
   "Please log in to your wallet first!": "まずウォレットにログインしてください！",
