--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "개인화",
   "Plain text (.txt)": "평문(.txt)",
   "Playground": "놀이터",
-  "Please complete the KYC verification to convert your points into cash": "포인트를 현금으로 바꾸기 위해 KYC 인증을 완료하세요",
+  "Please complete the KYC verification !": "KYC 인증을 완료해주세요 !",
   "Please enter the password!": "비밀번호를 입력하세요!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "MetaMask와 같은 Ethereum 지갑 플러그인을 설치하세요",
   "Please log in to your wallet first!": "먼저 지갑에 로그인하세요!",
