--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "Personalização",
   "Plain text (.txt)": "Texto simples (.txt)",
   "Playground": "Espaço de brincadeira",
-  "Please complete the KYC verification to convert your points into cash": "Por favor, complete a verificação KYC para converter seus pontos em dinheiro",
+  "Please complete the KYC verification !": "Por favor, complete a verificação KYC !",
   "Please enter the password!": "Por favor, insira a senha!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Por favor, instale o plugin de carteira Ethereum, como MetaMask.",
   "Please log in to your wallet first!": "Por favor, faça login em sua carteira primeiro!",
