--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -382,7 +382,7 @@
   "Personalization": "Персонализация",
   "Plain text (.txt)": "Простой текст (.txt)",
   "Playground": "Площадка для экспериментов",
-  "Please complete the KYC verification to convert your points into cash": "Пожалуйста, выполните проверку KYC для преобразования ваших баллов в наличные",
+  "Please complete the KYC verification !": "Пожалуйста, завершите верификацию KYC !",
   "Please enter the password!": "Пожалуйста, введите пароль!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Пожалуйста, установите плагин кошелька Ethereum, например MetaMask.",
   "Please log in to your wallet first!": "Пожалуйста, войдите в свой кошелек первым!",
