--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "การกำหนดแต่ละบุคคล",
   "Plain text (.txt)": "ข้อความดิบ (.txt)",
   "Playground": "ที่เล่น",
-  "Please complete the KYC verification to convert your points into cash": "โปรดทำการตรวจสอบ KYC เพื่อแปลงแต้มของคุณเป็นเงินสด",
+  "Please complete the KYC verification !": "กรุณาเสร็จสิ้นการตรวจสอบ KYC !",
   "Please enter the password!": "โปรดกรอกรหัสผ่าน!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "โปรดติดตั้งปลั๊กอินกระเป๋าเงิน Ethereum เช่น MetaMask.",
   "Please log in to your wallet first!": "โปรดเข้าสู่ระบบในกระเป๋าเงินของคุณก่อน!",
