--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "Özelleştirme",
   "Plain text (.txt)": "Düz Metin (.txt)",
   "Playground": "Oynamak Alanı",
-  "Please complete the KYC verification to convert your points into cash": "Puanlarınızı nakit'e çevirmek için KYC doğrulamasını tamamlayın",
+  "Please complete the KYC verification !": "Lütfen KYC doğrulamasını tamamlayın !",
   "Please enter the password!": "Lütfen şifreyi girin!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Lütfen Ethereum cüzdan eklentisini, örneğin MetaMask'i yükleyin",
   "Please log in to your wallet first!": "Lütfen önce cüzdanınıza giriş yapın!",
