--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -383,7 +383,7 @@
   "Personalization": "Tùy chỉnh cho cá nhân",
   "Plain text (.txt)": "Văn bản thuần túy (.txt)",
   "Playground": "Để chơi",
-  "Please complete the KYC verification to convert your points into cash": "Vui lòng hoàn thành xác nhận KYC để chuyển đổi điểm của bạn thành tiền mặt",
+  "Please complete the KYC verification !": "Vui lòng hoàn thành xác nhận KYC !",
   "Please enter the password!": "Vui lòng nhập mật khẩu!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Vui lòng cài đặt phần mềm phụ kiện ví Ethereum, chẳng hạn như MetaMask.",
   "Please log in to your wallet first!": "Vui lòng đăng nhập vào ví của bạn trước!",
