--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -396,7 +396,7 @@
   "Personalization": "个性化",
   "Plain text (.txt)": "纯文本（.txt 格式）",
   "Playground": "操场；试验场；（在编程等领域可能指供测试、尝试新功能的区域，如代码试验场）",
-  "Please complete the KYC verification to convert your points into cash": "请完成了解你的客户（KYC）验证以将你的积分兑换成现金",
+  "Please complete the KYC verification !": "请完成 KYC 验证 !",
   "Please enter the password!": "请输入密码！",
   "Please install Ethereum wallet plugin, such as MetaMask.": "请安装以太坊钱包插件，如 MetaMask。",
   "Please log in to your wallet first!": "请先登录你的钱包！",
