--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -382,7 +382,7 @@
   "Personalization": "Personnalisation",
   "Plain text (.pdf)": "Texte brut (.pdf)",
   "Playground": "Terrain de jeu",
-  "Please complete the KYC verification to convert your points into cash": "Veuillez compléter la vérification KYC pour convertir vos points en espèces",
+  "Please complete the KYC verification !": "Veuillez compléter la vérification KYC !",
   "Please enter the password!": "Veuillez entrer le mot de passe!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Veuillez installer le plugin de portefeuille Ethereum, par exemple MetaMask.",
   "Please log in to your wallet first!": "Veuillez vous connecter à votre portefeuille en premier!",
