更新 领取 创建 奖励bug  和 升级 vip 提示语

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "Die Länge des Namens darf nicht weniger als 3 Zeichen sein",
   "The length of the name cannot exceed 12 characters": "Die Länge des Namens darf nicht mehr als 12 Zeichen sein",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Der Punktzahl sollte ein Wert zwischen 0.0 (0%) und 1.0 (100%) sein.",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "Die Nutzungsbegrenzung für das Modell Llama-3.1-405B beträgt 10 Mal pro Tag, bei anderen Modellen 100 Mal pro Tag.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "Die Nutzungsbegrenzung für das Modell Llama-3.1-405B beträgt 1000 Mal pro Tag, bei anderen Modellen 10000 Mal pro Tag.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Für Benutzer, die eine Brieftasche erstellt haben, beträgt die tägliche Limitierung 50 Mal. Für Benutzer, die keine Brieftasche erstellt haben, beträgt die tägliche Limitierung 10 Mal.",
+  "For VlP users, the daily limit is 500 times.": "Für VIP-Nutzer beträgt die tägliche Limitierung 500 Mal.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Der von Ihnen eingeladene Benutzer muss den Prozess der Wallet-Erstellung und der KYC-Verifikation abschließen, bevor Sie die Belohnung erhalten können.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Dies gewährleistet, dass Ihre wertvollen Gespräche sicher in Ihrer Backend-Datenbank gespeichert werden. Danke!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Dies ist ein exklusives Service für Pro-Benutzer. \n Bitte upgraden Sie Ihre Pro-Berechtigungen zuerst!",
