--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "",
   "The length of the name cannot exceed 12 characters": "",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "",
+  "For VlP users, the daily limit is 500 times.": "",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "",
