--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "La longitud del nombre no puede ser menor que 3 caracteres",
   "The length of the name cannot exceed 12 characters": "La longitud del nombre no puede exceder 12 caracteres",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "La puntuación debe ser un valor entre 0.0 (0%) y 1.0 (100%).",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "El límite de uso para el modelo Llama-3.1-405B es de 10 veces por día, para los otros modelos 100 veces por día.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "El límite de uso para el modelo Llama-3.1-405B es de 1000 veces por día, para los otros modelos 10000 veces por día.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Para los usuarios que han creado una billetera, el límite diario es de 50 veces. Para los usuarios que no han creado una billetera, el límite diario es de 10 veces.",
+  "For VlP users, the daily limit is 500 times.": "Para los usuarios VIP, el límite diario es de 500 veces.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "El usuario que invites debe completar el proceso de creación de billetera y la verificación KYC antes de que puedas recibir la recompensa",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Esto garantiza que tus valiosas conversaciones se guarden de manera segura en tu base de datos de backend. ¡Gracias!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Este es un servicio exclusivo para usuarios pro. \n Por favor, actualiza tus permisos pro primero!",
