--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -493,8 +493,8 @@
   "The length of the name cannot be less than 3 characters": "La longueur du nom ne peut pas être inférieureà 3 caractères",
   "The length of the name cannot exceed 12 characters": "La longueur du nom ne peut pas dépasser 12 caractères",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Le score doit être une valeur comprise entre 0.0 (0%) et 1.0 (100%).",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "La limite d'utilisation pour le modèle Llama-3.1-405B est de 10 fois par jour, pour les autres modèles 100 fois par jour.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "La limite d'utilisation pour le modèle Llama-3.1-405B est de 1000 fois par jour, pour les autres modèles 10000 times per day.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Pour les utilisateurs ayant créé un portefeuille, la limite quotidienne est de 50 fois. Pour les utilisateurs n'ayant pas créé un portefeuille, la limite quotidienne est de 10 fois.",
+  "For VlP users, the daily limit is 500 times.": "Pour les utilisateurs VIP, la limite quotidienne est de 500 fois.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "L'utilisateur que vous invitez doit compléter le processus de création de portefeuille et la vérification KYC avant que vous puissiez recevoir la récompense",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Cela garantit que vos conversations précieuses sont sauvegardées en toute sécurité dans votre base de données de back-end. Merci!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "C'est un service exclusif pour les utilisateurs pro. \n Veuillez mettre à niveau vos permissions pro en premier!",
