--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -496,8 +496,8 @@
   "The length of the name cannot be less than 3 characters": "名前の長さは 3 文字以上でなければなりません",
   "The length of the name cannot exceed 12 characters": "名前の長さは 12 文字以下でなければなりません",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "スコアは 0.0（0%）から 1.0（100%）の間の値でなければなりません",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "モデル Llama-3.1-405B の使用制限は 1 日 10 回、他のモデルは 1 日 100 回です。",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "モデル Llama-3.1-405B の使用制限は 1 日 1000 回、他のモデルは 1 日 10000 回です。",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "ウォレットを作成したユーザーには、日に 50 回までの制限があります。ウォレットを作成していないユーザーには、日に 10 回までの制限があります。",
+  "For VlP users, the daily limit is 500 times.": "VIP ユーザーには、日に 500 回までの制限があります。",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "あなたが招待するユーザーは、報酬を受け取る前にウォレット作成と KYC 検証プロセスを完了しなければなりません",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "これは、あなたの貴重な会話がバックエンドデータベースに安全に保存されることを保証します。ありがとう！",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "これはプロユーザー向けの独占サービスです。まずプロの権限をアップグレードしてください！",
