--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "이름의 길이는 3자 이상이어야 합니다.",
   "The length of the name cannot exceed 12 characters": "이름의 길이는 12자 이하이어야 합니다.",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "점수는 0.0 (0%)와 1.0 (100%) 사이의 값이어야 합니다.",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "Llama-3.1-405B 모델의 사용 제한은 하루에 10회, 다른 모델은 하루에 100회입니다.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "Llama-3.1-405B 모델의 사용 제한은 하루에 1000회, 다른 모델은 하루에 10000회입니다.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "지갑을 생성한 사용자에게는 일일 한도가 50회입니다. 지갑을 생성하지 않은 사용자에게는 일일 한도가 10회입니다.",
+  "For VlP users, the daily limit is 500 times.": "VIP 사용자에게는 일일 한도가 500회입니다.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "초대한 사용자가 보상을 받기 전에 지갑 생성과 KYC 인증 과정을 완료해야 합니다.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "이것은 귀중한 대화가 백엔드 데이터베이스에 안전하게 저장되도록 보장합니다. 감사합니다!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "이것은 프로 사용자를 위한 독점적인 서비스입니다. \n 먼저 프로 권한을 업그레이드하세요!",
