--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "A comprimento do nome não pode ser menor que 3 caracteres",
   "The length of the name cannot exceed 12 characters": "A comprimento do nome cannot exceder 12 caracteres",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "A pontuação deve ser um valor entre 0.0 (0%) e 1.0 (100%).",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "Olimite de uso para o modelo Llama-3.1-405B é de 10 vezes por dia, para os outros modelos 100 vezes por dia.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "O limite de uso para o modelo Llama-3.1-405B é de 1000 vezes por dia, para os outros modelos 10000 vezes por dia.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Para os usuários que criaram uma carteira, o limite diário é de 50 vezes. Para os usuários que não criaram uma carteira, o limite diário é de 10 vezes.",
+  "For VlP users, the daily limit is 500 times.": "Para os usuários VIP, o limite diário é de 500 vezes.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "O usuário que você convida deve completar o processo de criação de carteira e a verificação KYC antes de você receber a recompensa",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Isso garante que suas valiosas conversas sejam salvas com segurança em seu banco de dados de backend. Obrigado!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Este é um serviço exclusivo para usuários pro. \n Por favor, atualize suas permissões pro primeiro!",
