--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "İsim uzunluğu 3 karakterden az olamaz.",
   "The length of the name cannot exceed 12 characters": "İsim uzunluğu 12 karakterden fazla olamaz.",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Puan 0.0 (0%) ile 1.0 (100%) arasında bir değer olmalıdır.",
-  "The usage limit for the model Llama-3.1-40 leopard is 10 times per day, other models 100 times per day.": "Llama-3.1-40 leopard modelinin kullanım sınırı günde 10 kez, diğer modeller günde 100 kez.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "Llama-3.1-405B modelinin kullanım sınırı günde 1000 kez, diğer modeller günde 10000 kez.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Cüzdan oluşturmuş kullanıcılar için günlük sınır 50 kezdir. Cüzdan oluşturmamış kullanıcılar için günlük sınır 10 kezdir.",
+  "For VlP users, the daily limit is 500 times.": "VIP kullanıcılar için günlük sınır 500 kezdir.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Davet ettiğiniz kullanıcı ödül alabilmeniz için cüzdan oluşturma ve KYC doğrulama işlemlerini tamamlamalıdır.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Bu, değerli konuşmalarınızın güvenli bir şekilde arka uç veritabanınıza kaydedilmesini sağlar. Teşekkür ederiz!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Bu, pro kullanıcılar için özel bir hizmetdir. \n Lütfen önce pro izinlerinizi yükseltin!",
