--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -524,8 +524,8 @@
   "The length of the name cannot be less than 3 characters": "名称的长度不能少于 3 个字符",
   "The length of the name cannot exceed 12 characters": "名称的长度不能超过 12 个字符",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "分数应该是介于 0.0（0%）和 1.0（100%）之间的值。",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "Llama-3.1-400B 模型的使用限制是每天 10 次，其他模型每天 100 次。",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "Llama-3.1-405B 模型的使用限制是每天 1000 次，其他模型每天 10000 次。",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "对于已经创建钱包的用户，每日限制为 50 次。对于尚未创建钱包的用户，每日限制为 10 次。",
+  "For VlP users, the daily limit is 500 times.": "对于 VIP 用户，每日限制为 500 次。",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "你邀请的用户必须完成钱包创建和了解你的客户（KYC）验证流程，然后你才能获得奖励",
   "Theme": "主题；主题风格",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "这确保了您宝贵的对话被安全地保存到后端数据库。谢谢！",
