--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -494,8 +494,8 @@
   "The length of the name cannot be less than 3 characters": "Panjang nama tidak boleh kurang dari 3 karakter",
   "The length of the name cannot exceed 12 characters": "Panjang nama tidak boleh lebih dari 12 karakter",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Skor harus berupa nilai antara 0.0 (0%) dan 1.0 (100%).",
-  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "Batas penggunaan model Llama-3.1-405B adalah 10 kali per hari, model lainnya 100 kali per hari.",
-  "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "Batas penggunaan model Llama-3.1-405B adalah 1000 times per day, other models 10000 times per day.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Untuk pengguna yang telah membuat dompet, batas hariannya adalah 50 kali. Untuk pengguna yang belum membuat dompet, batas hariannya adalah 10 kali.",
+  "For VlP users, the daily limit is 500 times.": "Untuk pengguna VIP, batas hariannya adalah 500 kali.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Pengguna yang Anda undang harus menyelesaikan proses pembuatan dompet dan proses verifikasi KYC sebelum Anda dapat menerima hadiah",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Ini memastikan bahwa obrolan berharga Anda disimpan dengan aman ke database backend Anda. Terima kasih!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Ini adalah layanan eksklusif untuk pengguna pro. \n Mohon tingkatkan izin pro Anda terlebih dahulu!",
